Ensure provided non-quare profile pictures are not distorted

--- a/app/assets/stylesheets/forms.css
+++ b/app/assets/stylesheets/forms.css
@@ -91,6 +91,9 @@
 }
 
 .profile-picture-section img {
+	width: 100px;
+	height: 100px;
+	object-fit: cover;
 	border-radius: 50px;
 }
 
