--- a/app/assets/stylesheets/header.css
+++ b/app/assets/stylesheets/header.css
@@ -64,6 +64,7 @@ nav a:last-child img {
 	border-radius: 15px;
 	width: 30px;
 	height: 30px;
+	object-fit: cover;
 }
 
 
