--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -29,6 +29,9 @@
 
 .profile-information-container img {
 	border-radius: 100px;
+	height: 200px;
+	width: 200px;
+	object-fit: cover;
 }
 
 .profile-details {
